feat(page-main): Перенос главной страницы (таймеров) на Alpine.js

--- a/app/templates/_page_main.html
+++ b/app/templates/_page_main.html
@@ -1,7 +1,8 @@
 <section
     id="page-main"
     class="page-content"
-    :class="{ 'active': $store.app.ui.isLoaded && $store.app.ui.currentPage === 'page-main' }">
+    :class="{ 'active': $store.app.ui.currentPage === 'page-main' }">
+
     <template x-if="$store.app.config.timers.arrival_timer_enabled">
         <div
             id="timer-arrival-module"
@@ -57,4 +58,4 @@
         </div>
     </template>
 
-</section>
+    </section>
