--- a/app/templates/_page_main.html
+++ b/app/templates/_page_main.html
@@ -13,8 +13,16 @@
                 () => 'countdown',
                 () => $store.app.config.timers.timer_completed_message
             )"
-            x-init="init()">
+            x-init="init()"
 
+            @mouseenter="$store.app.setHoverTarget('arrival')"
+            @mouseleave="$store.app.setHoverTarget(null)"
+            :class="{ 'hover-active': $store.app.ui.hoverTargetType === 'arrival' }"
+            :style="{ /* Анимация пульсации */
+                animation: ($store.app.config.animations_enabled && $store.app.ui.hoverTargetType === 'arrival')
+                           ? 'heartbeat 1s infinite ease-in-out' : 'none'
+            }"
+            >
             <h2 class="timer-module-title" x-text="$store.app.config.timers.arrival_timer_text"></h2>
             <div class="timer-display large" id="timer-arrival-display"></div>
         </div>
@@ -24,38 +32,45 @@
         <div
             id="timer-relationship-module"
             class="timer-module"
-            x-data="alpineTicker(
+             x-data="alpineTicker(
                 'timer-relationship-display',
                 () => $store.app.config.date_relationship_start,
                 () => 'elapsed',
                 () => $store.app.config.timers.timer_completed_message
             )"
-            x-init="init()">
+            x-init="init()"
 
+             @mouseenter="$store.app.setHoverTarget('relationship')"
+            @mouseleave="$store.app.setHoverTarget(null)"
+             :class="{ 'hover-active': $store.app.ui.hoverTargetType === 'relationship' }"
+             :style="{ /* Анимация пульсации */
+                animation: ($store.app.config.animations_enabled && $store.app.ui.hoverTargetType === 'relationship')
+                           ? 'heartbeat 1s infinite ease-in-out' : 'none'
+             }"
+             >
             <h2 class="timer-module-title" x-text="$store.app.config.timers.relationship_timer_text"></h2>
             <div class="timer-display medium" id="timer-relationship-display"></div>
 
             <div id="custom-timers-container" class="custom-timers-list">
                 <template x-for="timer in $store.app.config.timers.custom_timers" :key="timer.id">
-                    <div class="custom-timer-module" x-show="timer.enabled"
-                        x-data="alpineTicker(
-                            `timer-${timer.id}`,
-                            () => timer.date,
-                            () => $store.app.getCustomTimerMode(timer.date),
-                            () => $store.app.config.timers.timer_completed_message
-                        )"
-                        x-init="init()">
-
-                        <h3 class="custom-timer-label" x-text="timer.label" :title="timer.label"></h3>
-                        <div
-                            class="custom-timer-display"
-                            :id="`timer-${timer.id}`"
-                            :style="{ color: $store.app.getCustomTimerColor(timer.date) }">
+                    <template x-if="timer.enabled">
+                        <div class="custom-timer-module"
+                             x-data="alpineTicker(
+                                `timer-${timer.id}`,
+                                () => timer.date,
+                                () => $store.app.getCustomTimerMode(timer.date),
+                                () => $store.app.config.timers.timer_completed_message
+                             )"
+                             x-init="init()">
+                            <h3 class="custom-timer-label" x-text="timer.label" :title="timer.label"></h3>
+                            <div
+                                class="custom-timer-display"
+                                :id="`timer-${timer.id}`"
+                                :style="{ color: $store.app.getCustomTimerColor(timer.date) }">
+                            </div>
                         </div>
-                    </div>
+                    </template>
                 </template>
-            </div>
-        </div>
-    </template>
+            </div> </div> </template>
 
-    </section>
+</section>
